--- a/style.css
+++ b/style.css
@@ -1,3 +1,27 @@
 body {
-    background: rgb(108, 122, 137, 1);
+    background: rgb(9, 5, 78);
+}
+
+nav {
+    text-align: center;
+}
+
+nav a {
+    padding-left: 10px;
+    padding-right: 10px;
+    background: rgba(255, 255, 255, 0.75);
+    font-size: xx-large;
+
+}
+h1, h2 {
+    text-align: center;
+    font-family: Georgia;
+    background: rgba(255, 255, 255, 0.75)
+}
+
+iframe {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-top: 10px;
 }
